re PR fortran/21177 (wrong code with NULL())

PR fortran/21177

	* interface.c (compare_parameter): Ignore type for EXPR_NULL
	only if type is BT_UNKNOWN.

	* gfortran.dg/pr21177.f90: New test.

From-SVN: r98839